# my-cms

./: '  .dockerignore  .env  .env.example  .env.my-cms.example  .env.supabase.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  AI_TRANSLATION_IMPLEMENTATION.md  Cargo.toml  Dioxus.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  QDRANT_TROUBLESHOOTING.md  README.md  SMART_TRANSLATION_REUSE.md  TRANSLATION_API.md  TRANSLATION_QUALITY_IMPROVEMENTS.md  TRANSLATION_TESTS.md  VECTOR_DB_INTEGRATION_GUIDE.md  bootstrap.sh  docker-compose.my-cms.yaml  docker-compose.override.example.yml  docker-compose.supabase.yaml  docker-compose.test.yml  docker-compose.yml  index.yaml  input.css  opencode.json  reset-apps.sh  reset-supabase.sh  resetsupabasedb.sh  run-docker.sh  sea-orm-cli-generate-entities.sh  sea-orm-cli.sh  sonar-project.properties  style-guide.html  take-coverage.sh
application_core/: Cargo.toml  README.md
application_core/src/: lib.rs
application_core/src/commands/: mod.rs
application_core/src/commands/ai/: README.md  mod.rs  vector_store.rs
application_core/src/commands/ai/translate/: mod.rs  translate_handler.rs  translate_request.rs  translate_response.rs
application_core/src/commands/category/: mod.rs
application_core/src/commands/category/create/: create_handler.rs  create_request.rs
application_core/src/commands/category/delete/: delete_handler.rs  mod.rs
application_core/src/commands/category/modify/: mod.rs  modify_handler.rs  modify_request.rs
application_core/src/commands/category/read/: category_read_handler.rs
application_core/src/commands/media/: mod.rs
application_core/src/commands/media/create/: create_handler.rs
application_core/src/commands/media/delete/: delete_handler.rs
application_core/src/commands/media/list/: list_handler.rs
application_core/src/commands/media/read/: metadata_handler.rs  mod.rs  read_handler.rs
application_core/src/commands/post/: mod.rs
application_core/src/commands/post/create/: create_handler.rs  create_request.rs
application_core/src/commands/post/delete/: delete_handler.rs
application_core/src/commands/post/modify/: modify_handler.rs  modify_request.rs
application_core/src/commands/post/read/: read_handler.rs
application_core/src/commands/tag/: mod.rs
application_core/src/commands/tag/create/: create_handler.rs
application_core/src/commands/tag/delete/: delete_handler.rs
application_core/src/commands/tag/read/: read_handler.rs  read_response.rs
application_core/src/common/: app_error.rs  datetime_generator.rs  extensions.rs  mod.rs
application_core/src/entities/: categories.rs  category_tags.rs  mod.rs  post_tags.rs  post_translations.rs  posts.rs  prelude.rs  tags.rs
application_core/src/graphql/: query_root.rs
apps/api/application_core/: Cargo.toml
apps/api/application_core/src/commands/: mod.rs
apps/api/application_core/src/common/: app_error.rs
apps/api/application_core/src/entities/: sea_orm_active_enums.rs
apps/api/application_core/src/graphql/: query_root.rs
apps/api/test_helpers/: Cargo.toml
entity/: Cargo.toml
entity/src/: category.rs  lib.rs  post.rs  prelude.rs
services/: .env  Cargo.toml  Dockerfile
services/application_core/: Cargo.toml
services/application_core/src/: lib.rs
services/application_core/src/commands/ai/: mod.rs  vector_store_pg.rs
services/application_core/src/commands/media/: mod.rs  supabase_storage.rs
services/application_core/src/commands/post/: mod.rs
services/application_core/src/common/: app_error.rs  datetime_generator.rs  mod.rs
services/application_core/src/entities/: categories.rs  category_tags.rs  category_translations.rs  mod.rs  posts.rs  prelude.rs  tags.rs  test_fulltext.rs  translation_jobs.rs
services/cms/: .env  Cargo.toml  README.md
services/cms/adder/: Cargo.toml
services/cms/adder/src/: lib.rs
services/cms/entity/src/: post.rs
services/cms/migration/src/: m20240409_151952_release_100.rs
services/cms/migrations/2024-04-02-152054_create_posts/: up.sql
services/cms/migrations/2024-04-03-160331_create_posts/: up.sql
services/cms/src/: lib.rs  main.rs  schema.rs
services/cms/src/common/: mod.rs  tracing_initializer.rs
services/cms/src/domains/: mod.rs  post.rs  prelude.rs
services/cms/src/domains/post/: mod.rs
services/cms/src/handlers/: authorization_handler.rs  mod.rs  post_handler.rs  root_handler.rs
services/cms/src/infrastructure/: database.rs  mod.rs
services/cms/src/integration_tests/: mod.rs
services/cms/src/presentation_models/: api_response.rs  request_create_post.rs
services/cms/src/tests/: post_test.rs
services/cms/tests/: crud_posts.rs
services/front-end-using-dioxus/: Cargo.toml
services/front-end-using-dioxus/public/: tailwind.css
services/migration/src/: lib.rs  m20260126_040610_release_300.rs  m20260531_000001_pgvector.rs
services/my-blogs-ui/: pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
services/my-blogs-ui-ts/: .prettierrc  package-lock.json  package.json  tailwind.config.ts
services/my-blogs-ui-ts/src/lib/domains/: post.ts
services/my-blogs-ui-ts/src/routes/about/: +page.svelte
services/my-blogs-ui-ts/src/routes/blog/: +page.server.ts  +page.svelte
services/my-blogs-ui/src/: app.html
services/my-blogs-ui/src/lib/: Scene.svelte
services/my-blogs-ui/src/lib/components/: NavBar.svelte
services/my-blogs-ui/src/lib/domains/: index.ts
services/my-blogs-ui/src/lib/types/: index.ts
services/my-blogs-ui/src/routes/: +layout.svelte  +page.svelte
services/references/: documentation.html
services/references/TailwickAdmin/: package-lock.json  package.json  svelte.config.js
services/references/TailwickAdmin/src/Layouts/: Header.svelte  RightSidebar.svelte  (+2 more)
services/src/api/: mod.rs
services/src/api/delete/: delete_handler.rs
services/src/api/graphql/: mod.rs
services/src/api/post/: mod.rs
services/src/common/: mod.rs  supabase_auth.rs
services/src/presentation_models/: api_response.rs
services/test_helpers/: Cargo.toml
services/test_helpers/src/: lib.rs
test_helpers/: Cargo.toml
test_helpers/src/: lib.rs
(+913 files in other folders)
