[workspace]
members = ["application_core", "migration", "test_helpers"]

[package]
name = "cms"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
async-std = "1.13.2"
axum = { version = "0.8.4", features = ["http2", "tracing", "multipart"] }
axum-keycloak-auth = { version = "0.8.3" }
axum-tracing-opentelemetry = { version = "0.30.0" }

serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
dotenv = "0.15.0"
sea-orm = { version = "1.1.16", features = ["debug-print"] }
sea-orm-migration = "1.1.16"
seaography = { version = "1.1.4", features = [
  "with-decimal",
  "with-chrono",
  "with-postgres-array",
] }
async-graphql-axum = { version = "7.0.17" }
async-graphql = { version = "7.0.17", features = [
  "decimal",
  "chrono",
  "dataloader",
  "dynamic-schema",
] }
lazy_static = "1.5.0"
chrono = "0.4.42"
rust-s3 = { version = "0.37.0" }
hyper = { version = "1.7.0" }
hyper-util = { version = "0.1.17" }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "tracing", "cors"] }
tower-cookies = "0.11.0"

tracing = { version = "0.1.41", default-features = false, features = [
  "std",
  "attributes",
] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
  "registry",
  "std",
  "fmt",
] }
tracing-opentelemetry = { version = "0.31.0" }
tracing-opentelemetry-instrumentation-sdk = { version = "0.30.0" }
init-tracing-opentelemetry = { version = "0.30.1", features = [
  "otlp",
  "tracing_subscriber_ext",
] }
opentelemetry = { version = "0.30.0" }
opentelemetry-otlp = { version = "0.30.0" }

jsonwebtoken = { version = "9.3.1" }
oauth2 = { version = "5.0.0" }
reqwest = { version = "0.12.23" }

application_core = { path = "application_core" }
migration = { path = "migration" }

[dev-dependencies]
testcontainers = "0.25.0"
testcontainers-modules = { version = "0.13.0", features = [
  "postgres",
  "redis",
] }