[package]
name = "application_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.0"
tokio = { version = "1.40", features = ["full"] }
sea-orm = "1.0.1"
sea-orm-macros = "1.0.1"
seaography = { version = "1.0.0", features = [
  "with-decimal",
  "with-chrono",
  "with-postgres-array",
  "with-uuid",
] }
async-graphql = { version = "7.0.9", features = [
  "decimal",
  "chrono",
  "dataloader",
  "dynamic-schema",
] }
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
slugify = "0.1.0"
nanoid = "0.4.0"

tracing = { version = "0.1.40", default-features = false, features = [
  "std",
  "attributes",
] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
  "registry",
  "std",
  "fmt",
] }

rust-s3 = { version = "0.35.1" }


[dev-dependencies]
sea-orm-migration = "1.0.1"
fake = { version = "2.9.2", features = ["derive"] }
migration = { path = "../migration" }
test_helpers = { path = "../test_helpers" }
rand = "0.8.5"
