[package]
name = "application_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.2"
tokio = { version = "1.47.1", features = ["full"] }
sea-orm = "1.1.16"
sea-orm-macros = "1.1.16"
seaography = { version = "1.1.4", features = [
  "with-decimal",
  "with-chrono",
  "with-postgres-array",
  "with-uuid",
] }
async-graphql = { version = "7.0.17", features = [
  "decimal",
  "chrono",
  "dataloader",
  "dynamic-schema",
] }
lazy_static = "1.5.0"
serde = { version = "1.0.226", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
slugify = "0.1.0"
nanoid = "0.4.0"

tracing = { version = "0.1.41", default-features = false, features = [
  "std",
  "attributes",
] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
  "registry",
  "std",
  "fmt",
] }

rust-s3 = { version = "0.37.0" }
image = "0.25"
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
sea-orm-migration = "1.1.16"
fake = { version = "4.4.0", features = ["derive"] }
migration = { path = "../migration" }
test_helpers = { path = "../test_helpers" }
rand = "0.9.2"
