[workspace]
members = ["application_core", "migration", "test_helpers"]

[package]
name = "cms"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
async-std = "1.13.2"
axum = { version = "0.8.9", features = ["http2", "tracing", "multipart"] }
axum-tracing-opentelemetry = { version = "0.30.1" }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
dotenv = "0.15.0"
sea-orm = { version = "1.1.20", features = ["debug-print"] }
sea-orm-migration = "1.1.20"
seaography = { version = "1.1.4", features = [
  "with-decimal",
  "with-chrono",
  "with-postgres-array",
] }
async-graphql-axum = { version = "7.2.1" }
async-graphql = { version = "7.2.1", features = [
  "decimal",
  "chrono",
  "dataloader",
  "dynamic-schema",
] }
lazy_static = "1.5.0"
chrono = "0.4.44"
rust-s3 = { version = "0.37.2" }
hyper = { version = "1.10.1" }
hyper-util = { version = "0.1.20" }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["fs", "tracing", "cors"] }
tower-cookies = "0.11.0"

tracing = { version = "0.1.44", default-features = false, features = [
  "std",
  "attributes",
] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
  "registry",
  "std",
  "fmt",
] }
tracing-opentelemetry = { version = "0.31.0" }
tracing-opentelemetry-instrumentation-sdk = { version = "0.30.0" }
init-tracing-opentelemetry = { version = "0.30.1", features = [
  "otlp",
  "tracing_subscriber_ext",
] }
opentelemetry = { version = "0.30.0" }
opentelemetry-otlp = { version = "0.30.0" }

jsonwebtoken = { version = "9.3.1" }
reqwest = { version = "0.12.28" }
image = "0.25.10"
moka = { version = "0.12.15", features = ["future"] }

application_core = { path = "application_core" }
migration = { path = "migration" }

[dev-dependencies]
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = [
  "postgres",
  "redis",
] }
supabase-testcontainers-modules = { version = "1.1.0", features = ["auth"] }
test_helpers = { path = "test_helpers" }