[package]
name = "test_helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
sea-orm = "1.0.0"
sea-orm-macros = "1.0.0"
serde = { version = "1.0.204", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
testcontainers = "0.21.0"
testcontainers-modules = { version = "0.9.0", features = ["postgres"] }
