[package]
name = "test_helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
sea-orm = "1.1.12"
sea-orm-macros = "1.1.12"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
chrono = { version = "0.4.40", features = ["serde"] }
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }
migration = { path = "../migration" }
