[workspace]
members = ["migration"]


[package]
name = "cms"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
async-std = "1.12.0"
axum = "0.7.5"
serde = { version = "1.0.197", features = ["derive"] }
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
redis = "0.25.2"
sea-orm = "0.12.15"
sea-orm-migration = "0.12.15"
chrono = "0.4.37"
migration = { path = "migration" }


# For Dev and Testing
testcontainers = "0.15"
testcontainers-modules = { version = "0.3.6", features = ["postgres", "redis"] }
