[package]
name = "my-blogs-with-rust"
version = "0.1.0"
authors = ["ドイツ <thd1152015@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = [
  "fullstack",
  "router",
] }

# Debug
log = "0.4.21"
dioxus-logger = "0.4.1"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
