[package]
name = "test_helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.13.2"
sea-orm = "1.1.16"
sea-orm-macros = "1.1.16"
serde = { version = "1.0.226", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
testcontainers = "0.25.0"
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
migration = { path = "../migration" }
