[package]
name = "test_helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.13.2"
sea-orm = "1.1.16"
sea-orm-macros = "1.1.16"
serde = { version = "1.0.226", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
supabase-testcontainers-modules = { version = "1.1.0", features = ["auth"] }
migration = { path = "../migration" }
anyhow = "1.0"
tokio-postgres = "0.7"
