[package]
name = "application_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.2"
tokio = { version = "1.52.3", features = ["full"] }
sea-orm = "1.1.20"
sea-orm-macros = "1.1.20"
seaography = { version = "1.1.4", features = [
  "with-decimal",
  "with-chrono",
  "with-postgres-array",
  "with-uuid",
] }
async-graphql = { version = "7.2.1", features = [
  "decimal",
  "chrono",
  "dataloader",
  "dynamic-schema",
] }
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.2", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
slugify = "0.1.0"
nanoid = "0.4.0"

tracing = { version = "0.1.44", default-features = false, features = [
  "std",
  "attributes",
] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
  "registry",
  "std",
  "fmt",
] }

reqwest = { version = "0.12.28", features = ["multipart"] }
moka = { version = "0.12.15", features = ["future"] }
async-openai = "0.27"
html5ever = "0.27"
markup5ever_rcdom = "0.3"

[dev-dependencies]
sea-orm-migration = "1.1.20"
fake = { version = "4.4.0", features = ["derive"] }
migration = { path = "../migration" }
test_helpers = { path = "../test_helpers" }
rand = "0.9.4"
wiremock = "0.6.5"
tokio-test = "0.4"
