[package]
name = "adder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
testcontainers = "0.15"
testcontainers-modules = { version = "0.3.6", features = ["postgres", "redis"] }
redis = "0.25.2"
log = "0.4.21"
env_logger = "*"
